Following fixes: * avoid line breaking buttons * user-images + readable name instead of username * fixed error of contextmenue delete / move * Contextmenue download triggers a real download also for images

--- a/assets/cfiles.css
+++ b/assets/cfiles.css
@@ -1,9 +1,10 @@
-.fileinput-button {
+.overflow-ellipsis {
     position: relative;
     overflow: hidden;
     display: inline-block;
     max-width: 100%;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .fileinput-button input {
